--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 #balloon {
     position: absolute;
-    top: -10%;
+    top: -5%;
     left: 60%;
     z-index: 4;
     animation: moveBalloon 30s 1s;
@@ -49,7 +49,7 @@ body {
 
 #squirrels {
     position: absolute;
-    left: 10%;
+    left: 9%;
     top: 66%;
     z-index: 5;
 }
@@ -91,4 +91,17 @@ body {
 #proposal img { 
     width: 40%;
     height: 40%;
+}
+
+
+
+#overlay {
+    position:fixed;
+    z-index: 100;
+    top:0; 
+    left:0;
+    bottom:0; 
+    right:0;
+    background-color:rgba(197, 44, 44, 0.2);   
+    opacity: .95;
 }
